packages/kyvernoPolicies/chart/tests/vpol/restrict-selinux-type-cel/chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: selinux-type-bad
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-minimal:9.7
    securityContext:
      seLinuxOptions:
        type: disallowed_t
