packages/kyvernoPolicies/chart/tests/vpol/restrict-selinux-type-cel/chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selinux-type-good-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: selinux-type-good-deployment
  template:
    metadata:
      labels:
        app: selinux-type-good-deployment
    spec:
      securityContext:
        seLinuxOptions:
          type: container_t
      containers:
      - name: container01
        image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
        securityContext:
          seLinuxOptions:
            type: container_t
