packages/kyvernoPolicies/chart/tests/vpol/restrict-selinux-type-cel/chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-selinux-type-cel
spec:
  timeouts:
    cleanup: 2m
  steps:
  - name: step-01
    try:
    - apply:
        file: ../policy.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: restrict-selinux-type-cel
          spec:
            validationActions:
             - Deny
            matchConditions:
              - name: scope-to-test-ns
                expression: (cel; "object.metadata.namespace == '" + string(bindings.resolve("namespace")) + "'")
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        dryRun: true
        expect:
        - check:
            ($error != null): true
            (contains($error, 'validate.kyverno.svc')): true
            (contains($error, 'restrict-selinux-type-cel')): true
        file: pod-bad.yaml
  - name: step-03
    try:
    - apply:
        dryRun: true
        file: pod-good.yaml
    - apply:
        dryRun: true
        file: podcontroller-good.yaml
